--- a/src/main/resources/templates/bbs/qna/index.html
+++ b/src/main/resources/templates/bbs/qna/index.html
@@ -25,37 +25,7 @@
             </div>
         </div>
         <div class="card-body">
-            <table class="table table-hover table-bordered" id="qna-table">
-                <thead>
-                    <tr>
-                        <th style="width: 5%"></th>
-                        <th style="width: 10%;">번호</th>
-                        <th style="width: 30%">제목</th>
-                        <th style="width: 10%">첨부파일</th>
-                        <th style="width: 10%">조회수</th>
-                        <th style="width: 10%">답변</th>
-                    </tr>
-                </thead>
-                <tbody id="qna-tbody">
-                    <th:block th:if="${postList.size() > 0}">
-                        <tr th:each="post, postStat : ${postList}" th:data-num="${post.regId}" th:data-value="${post.id}">
-                            <td style="width: 5%;">
-                                <i th:class="${post.regId == user.id} ? 'front-medium-2' : 'front-medium-2 lock'" th:data-feather="${post.regId == user.id} ? 'unlock' : 'lock'"></i>
-                            </td>
-                            <td style="width: 10%" th:text="${postStat.index + 1}"></td>
-                            <td style="width: 30%" class="text-start" th:text="${post.title}"></td>
-                            <td style="width: 10%" th:text="${(post.file == null) ? 0 : post.file.fileList.size()}"></td>
-                            <td style="width: 10%" th:text="${post.readCnt}"></td>
-                            <td style="width: 10%" th:text="${post.answerList.size()}"></td>
-                        </tr>
-                    </th:block>
-                    <th:block th:unless="${postList.size() > 0}">
-                        <tr>
-                            <td colspan="6">게시글이 비어있습니다.</td>
-                        </tr>
-                    </th:block>
-                </tbody>
-            </table>
+            <div id="qna-table"></div>
         </div>
     </div>
 </th:block>
@@ -64,24 +34,40 @@
 <script th:inline="javascript">
 
     const type = /*[[${type}]]*/ []
-    const user = /*[[${user}]]*/ {};
+    const user = /*[[${user}]]*/ {}
+    const id = /*[[${id}]]*/ null
+    const table = new Table("qna-table")
 
-    $(document).ready(function(e) {
-        feather.replace()
-    })
+    $(document).ready(function() {
+        table
+            .get(`/api/postsWithFileByPostType/${id}`)
+            .add(new Column("regId").title("").width("5%").center().formatter(function(cell) {
+                const cellData = cell.getValue()
+                const classNm = (cellData == user.id) ? 'front-medium-2' : 'front-medium-2 lock'
+                const feathers = (cellData == user.id) ? 'unlock' : 'lock'
+                return `<i class="${classNm}" data-feather=${feathers} />`
+            }))
+            .add(new Column("index").title("#").width("10%").center())
+            .add(new Column("title").title("제목").width("30%").left())
+            .add(new Column("readCnt").title("조회수").width("20%").center())
+            .add(new Column("file").title("첨부파일").width("20%").center().formatter(function(cell) {
+                const cellData = cell.getValue()
+                return (cellData === null) ? '0 개' : `${cellData['fileList'].length} 개`
+            }))
+            .add(new Column("answerList").title("답변").width("10%").formatter(function(cell){
+                const cellData = cell.getValue()
+                return `${cellData.length} 개`
+            }))
+            .init()
 
-    document.addEventListener('DOMContentLoaded', function () {
-        const tbody = document.getElementById("qna-tbody")
-        const tableRows = tbody.querySelectorAll('tr')
-        tableRows.forEach(function (row) {
-            row.addEventListener('click', function () {
-                const regId = this.getAttribute("data-num");
-                const postId = this.getAttribute("data-value");
+        table.rowClick((data, row) => {
+            if(user['role'] == 'ROLE_USER' && data['regId'] != user['id']) Util.alert("본인이 작성한 게시글에 대해서만 볼 수 있습니다.", 'w', 'w')
+            else window.location.href = `/bbs/view/${data['id']}`
+        })
 
-                if(user['role'] == 'ROLE_USER' && regId != user['id']) Util.alert("본인이 작성한 게시글에 대해서만 볼 수 있습니다.", 'w', 'w')
-                else window.location.href = `/bbs/view/${postId}`
-            });
-        });
+        table.afterComplete(() => {
+            feather.replace()
+        })
     })
 
     $("#new-bbsctt").on("click", function(e) {
