--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -9,4 +9,5 @@
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
     <script th:src="@{'/assets/js/core/file.js'}"></script>
+    <script th:src="@{'/assets/js/core/tabulator.js'}"></script>
 </th:block>
